Format codes.